feat: Stabilize Spark on Windows, add data contract validation (B1), and update README documentation